--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
   <div class="nav-item">
     <a href="https://mikesetzer.github.io/Homework-17/">
-    Home
+    Home Here
     </a>
   </div>
   <div class="nav-item">
